force-app/main/default/objects/numm__AccountingPeriod__c/numm__AccountingPeriod__c.object-meta.xml
<CustomObject>
    <description>Exercices comptables par entité. Utilisé par les immobilisations</description>
    <label>Exercice comptable</label>
    <nameField>
        <label>Exercice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exercices comptables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>