force-app/main/default/objects/numm__AccountingPeriod__c/fields/numm__Actif__c.field-meta.xml
<CustomField>
    <fullName>numm__Actif__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>En cochant cette case, vous activez la saisie de pièce sur cet exercice comptable.</inlineHelpText>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>