force-app/main/default/objects/numm__AccountingPeriod__c/fields/numm__EndDate__c.field-meta.xml
<CustomField>
    <fullName>numm__EndDate__c</fullName>
    <description>Date de fin de l&#39;exercice comptable</description>
    <inlineHelpText>Date de fin de l&#39;exercice comptable</inlineHelpText>
    <label>Date de fin</label>
    <required>true</required>
    <type>Date</type>
</CustomField>