force-app/main/default/objects/numm__AccountingPeriod__c/fields/numm__Entity__c.field-meta.xml
<CustomField>
    <fullName>numm__Entity__c</fullName>
    <label>Entité</label>
    <referenceTo>numm__Entity__c</referenceTo>
    <relationshipLabel>Exercices comptables</relationshipLabel>
    <relationshipName>Exercices_comptables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>