force-app/main/default/objects/numm__AccountingPeriod__c/fields/numm__StartDate__c.field-meta.xml
<CustomField>
    <fullName>numm__StartDate__c</fullName>
    <description>Date de début de l&#39;exercice comptable.</description>
    <inlineHelpText>Date de début de l&#39;exercice comptable.</inlineHelpText>
    <label>Date de début</label>
    <required>true</required>
    <type>Date</type>
</CustomField>