force-app/main/default/objects/numm__AccountingPeriod__c/validationRules/numm__ValidDate.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__ValidDate</fullName>
    <active>true</active>
    <description>La date de fin doit être supérieure à la date de début</description>
    <errorConditionFormula>numm__StartDate__c &gt;= numm__EndDate__c</errorConditionFormula>
    <errorMessage>La date de début doit être inférieure à la date de fin.</errorMessage>
</ValidationRule>